synapse: cleanup schema to allow enabled false

--- a/charts/matrix-stack/ci/test-cluster-mixin.yaml
+++ b/charts/matrix-stack/ci/test-cluster-mixin.yaml
@@ -12,5 +12,6 @@ element-web:
       tlsSecret: ess-selfsigned
 
 synapse:
-  ingress:
-    tlsSecret: ess-selfsigned
+  synapse:
+    ingress:
+      tlsSecret: ess-selfsigned
