--- a/charts/synapse/ci/worker-example-values.yaml
+++ b/charts/synapse/ci/worker-example-values.yaml
@@ -2,64 +2,65 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-global:
-  ess:
-    server_name: ess.localhost
+ess:
+  serverName: ess.localhost
 
-ingress:
-  host: synapse.ess.localhost
+synapse:
+  enabled: true
+  ingress:
+    host: synapse.ess.localhost
 
-registrationSharedSecret:
-  value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-macaroon:
-  value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-signingKey:
-  value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
+  registrationSharedSecret:
+    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+  macaroon:
+    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
+  signingKey:
+    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
 
-postgres:
-  host: ess-postgres
-  user: synapse_user
-  database: synapse
-  password:
-    secret: ess-postgres
-    secretKey: password
+  postgres:
+    host: ess-postgres
+    user: synapse_user
+    database: synapse
+    password:
+      secret: ess-postgres
+      secretKey: password
 
-workers:
-  appservice:
-    enabled: true
-  background:
-    enabled: true
-  client-reader:
-    enabled: true
-  encryption:
-    enabled: true
-  event-creator:
-    enabled: true
-  event-persister:
-    enabled: true
-    instances: 2
-  federation-reader:
-    enabled: true
-  federation-sender:
-    enabled: true
-  initial-synchrotron:
-    enabled: true
-  media-repository:
-    enabled: true
-  presence-writer:
-    enabled: true
-  pusher:
-    enabled: true
-    instances: 2
-  receipts-account:
-    enabled: true
-  sliding-sync:
-    enabled: true
-  sso-login:
-    enabled: true
-  synchrotron:
-    enabled: true
-  typing-persister:
-    enabled: true
-  user-dir:
-    enabled: true
+  workers:
+    appservice:
+      enabled: true
+    background:
+      enabled: true
+    client-reader:
+      enabled: true
+    encryption:
+      enabled: true
+    event-creator:
+      enabled: true
+    event-persister:
+      enabled: true
+      instances: 2
+    federation-reader:
+      enabled: true
+    federation-sender:
+      enabled: true
+    initial-synchrotron:
+      enabled: true
+    media-repository:
+      enabled: true
+    presence-writer:
+      enabled: true
+    pusher:
+      enabled: true
+      instances: 2
+    receipts-account:
+      enabled: true
+    sliding-sync:
+      enabled: true
+    sso-login:
+      enabled: true
+    synchrotron:
+      enabled: true
+    typing-persister:
+      enabled: true
+    user-dir:
+      enabled: true
