--- a/charts/synapse/templates/synapse_secret.yaml
+++ b/charts/synapse/templates/synapse_secret.yaml
@@ -23,7 +23,7 @@ data:
 {{- with .postgres.password.value }}
   POSTGRES: {{ . | b64enc }}
 {{- end }}
-{{- with .registrationSharedSecret.value }}
+{{- with .secrets.registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
 {{- with .signingKey.value }}
