--- a/charts/matrix-stack/ci/example-default-enabled-components.values.yaml
+++ b/charts/matrix-stack/ci/example-default-enabled-components.values.yaml
@@ -9,31 +9,33 @@ global:
     server_name: ess.localhost
 
 element-web:
-  ess:
-    server_name: ess.localhost
-
   elementWeb:
-    defaultMatrixServer:
-      baseUrl: https://synapse.ess.localhost
+    ess:
+      serverName: ess.localhost
 
-    ingress:
-      host: element.ess.localhost
+    elementWeb:
+      defaultMatrixServer:
+        baseUrl: https://synapse.ess.localhost
+
+      ingress:
+        host: element.ess.localhost
 
 synapse:
-  ingress:
-    host: synapse.ess.localhost
+  synapse:
+    ingress:
+      host: synapse.ess.localhost
 
-  registrationSharedSecret:
-    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-  macaroon:
-    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-  signingKey:
-    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
+    registrationSharedSecret:
+      value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+    macaroon:
+      value: CHANGEME-eek3Eigoh8ux8laeTingeej1
+    signingKey:
+      value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
 
-  postgres:
-    host: ess-postgres
-    user: synapse_user
-    database: synapse
-    password:
-      secret: ess-postgres
-      secretKey: password
+    postgres:
+      host: ess-postgres
+      user: synapse_user
+      database: synapse
+      password:
+        secret: ess-postgres
+        secretKey: password
