--- a/charts/synapse/ci/checkov-with-workers-values.yaml
+++ b/charts/synapse/ci/checkov-with-workers-values.yaml
@@ -2,49 +2,50 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-global:
-  ess:
-    server_name: ess.localhost
+ess:
+  serverName: ess.localhost
 
-ingress:
-  host: synapse.ess.localhost
+synapse:
+  enabled: true
+  ingress:
+    host: synapse.ess.localhost
 
-registrationSharedSecret:
-  value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-macaroon:
-  value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-signingKey:
-  value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
+  registrationSharedSecret:
+    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+  macaroon:
+    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
+  signingKey:
+    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
 
-postgres:
-  host: ess-postgres
-  user: synapse_user
-  database: synapse
-  password:
-    secret: ess-postgres
-    secretKey: password
+  postgres:
+    host: ess-postgres
+    user: synapse_user
+    database: synapse
+    password:
+      secret: ess-postgres
+      secretKey: password
 
-annotations:
-  checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
-  checkov.io/skip2: CKV_K8S_43=No digests
-  checkov.io/skip3: CKV2_K8S_6=No network policy yet
-
-workers:
-  appservice:
-    enabled: true
-  client-reader:
-    enabled: true
-  event-persister:
-    enabled: true
-
-haproxy:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
 
-redis:
-  annotations:
-    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
-    checkov.io/skip2: CKV_K8S_43=No digests
-    checkov.io/skip3: CKV2_K8S_6=No network policy yet
+  workers:
+    appservice:
+      enabled: true
+    client-reader:
+      enabled: true
+    event-persister:
+      enabled: true
+
+  haproxy:
+    annotations:
+      checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+      checkov.io/skip2: CKV_K8S_43=No digests
+      checkov.io/skip3: CKV2_K8S_6=No network policy yet
+
+  redis:
+    annotations:
+      checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+      checkov.io/skip2: CKV_K8S_43=No digests
+      checkov.io/skip3: CKV2_K8S_6=No network policy yet
