--- a/charts/synapse/ci/minimal-values.yaml
+++ b/charts/synapse/ci/minimal-values.yaml
@@ -2,24 +2,25 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-global:
-  ess:
-    server_name: ess.localhost
+ess:
+  serverName: ess.localhost
 
-ingress:
-  host: synapse.ess.localhost
+synapse:
+  enabled: true
+  ingress:
+    host: synapse.ess.localhost
 
-registrationSharedSecret:
-  value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
-macaroon:
-  value: CHANGEME-eek3Eigoh8ux8laeTingeej1
-signingKey:
-  value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
+  registrationSharedSecret:
+    value: CHANGEME-ooWo6jeidahhei3Hae0eer9U
+  macaroon:
+    value: CHANGEME-eek3Eigoh8ux8laeTingeej1
+  signingKey:
+    value: ed25519 0 bNQOzBUDszff7Ax81z6w0uZ1IPWoxYaazT7emaZEfpw
 
-postgres:
-  host: ess-postgres
-  user: synapse_user
-  database: synapse
-  password:
-    secret: ess-postgres
-    secretKey: password
+  postgres:
+    host: ess-postgres
+    user: synapse_user
+    database: synapse
+    password:
+      secret: ess-postgres
+      secretKey: password
