--- a/charts/synapse/templates/synapse_configmap.yaml
+++ b/charts/synapse/templates/synapse_configmap.yaml
@@ -24,7 +24,7 @@ data:
     {{- include "element-io.synapse.config.processSpecific" (dict "global" $ "context" (dict "processType" "main" "Values" .)) | nindent 4 }}
 {{- range $workerType, $workerDetails := (include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson }}
   05-{{ $workerType }}.yaml: |
-    {{- include "element-io.synapse.config.processSpecific" (dict "global" $ "context" (dict "processType" $workerType "Values" $.synapse.Values)) | nindent 4 }}
+    {{- include "element-io.synapse.config.processSpecific" (dict "global" $ "context" (dict "processType" $workerType "Values" $.Values.synapse)) | nindent 4 }}
 {{- end }}
   log_config.yaml: |
     # Copyright 2024 New Vector Ltd
