--- a/charts/synapse/templates/synapse_secret.yaml
+++ b/charts/synapse/templates/synapse_secret.yaml
@@ -17,15 +17,19 @@ data:
 {{- with .additional.config }}
   02-homeserver-helm-user-provided.yaml: {{ . | b64enc }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.macaroon" "secretProperty" .macaroon)) -}}
 {{- with .macaroon.value }}
   MACAROON: {{ . | b64enc }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.postgres.password" "secretProperty" .postgres.password)) -}}
 {{- with .postgres.password.value }}
   POSTGRES: {{ . | b64enc }}
 {{- end }}
-{{- with .secrets.registrationSharedSecret.value }}
+{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret)) -}}
+{{- with .registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.signingKey" "secretProperty" .signingKey)) -}}
 {{- with .signingKey.value }}
   SIGNING_KEY: {{ .| b64enc }}
 {{- end }}
