--- a/charts/synapse/templates/haproxy_serviceaccount.yaml
+++ b/charts/synapse/templates/haproxy_serviceaccount.yaml
@@ -6,20 +6,22 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
-{{- if .haproxy.serviceAccount.create }}
+{{- with .haproxy -}}
+{{- if .serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- with .haproxy.serviceAccount.annotations }}
+  {{- with .serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
     {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
   name: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "global" $ "context" .) }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
 
