--- a/charts/synapse/templates/redis_serviceaccount.yaml
+++ b/charts/synapse/templates/redis_serviceaccount.yaml
@@ -7,11 +7,12 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
 {{- if (include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson }}
-{{- if .redis.serviceAccount.create }}
+{{- with .redis -}}
+{{- if .serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  {{- with .redis.serviceAccount.annotations }}
+  {{- with .serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
@@ -22,6 +23,7 @@ metadata:
 automountServiceAccountToken: false
 {{- end }}
 {{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
 
