--- a/charts/synapse/templates/synapse_service.yaml
+++ b/charts/synapse/templates/synapse_service.yaml
@@ -7,7 +7,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
 {{- range $processType := prepend (keys ((include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson)) "main" }}
-{{- $perProcessRoot := merge (dict "ProcessType" $processType) $ }}
+{{- $perProcessRoot := merge (dict "ProcessType" $processType) $.Values.synapse }}
 apiVersion: v1
 kind: Service
 metadata:
