--- a/charts/synapse/templates/haproxy_serviceaccount.yaml
+++ b/charts/synapse/templates/haproxy_serviceaccount.yaml
@@ -16,8 +16,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "global" $ "context" .) }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "root" $ "context" .) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
