--- a/charts/synapse/templates/redis_serviceaccount.yaml
+++ b/charts/synapse/templates/redis_serviceaccount.yaml
@@ -6,7 +6,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
-{{- if (include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson }}
+{{- if (include "element-io.synapse.enabledWorkers" (dict "root" $ "context" .)) | fromJson }}
 {{- with .redis -}}
 {{- if .serviceAccount.create }}
 apiVersion: v1
@@ -17,8 +17,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.redis.labels" (dict "global" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.redis.serviceAccountName" (dict "global" $ "context" .) }}
+    {{- include "element-io.synapse.redis.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ include "element-io.synapse.redis.serviceAccountName" (dict "root" $ "context" .) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
