--- a/charts/synapse/templates/synapse_secret.yaml
+++ b/charts/synapse/templates/synapse_secret.yaml
@@ -10,26 +10,26 @@ apiVersion: v1
 kind: Secret
 metadata:
   labels:
-    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse
   namespace: {{ $.Release.Namespace }}
 data:
 {{- with .additional.config }}
   02-homeserver-helm-user-provided.yaml: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.macaroon" "secretProperty" .macaroon)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.macaroon" "secretProperty" .macaroon)) -}}
 {{- with .macaroon.value }}
   MACAROON: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.postgres.password" "secretProperty" .postgres.password)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.postgres.password" "secretProperty" .postgres.password)) -}}
 {{- with .postgres.password.value }}
   POSTGRES: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.registrationSharedSecret" "secretProperty" .registrationSharedSecret)) -}}
 {{- with .registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "global" $ "context" (dict "secretPath" "synapse.signingKey" "secretProperty" .signingKey)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.signingKey" "secretProperty" .signingKey)) -}}
 {{- with .signingKey.value }}
   SIGNING_KEY: {{ .| b64enc }}
 {{- end }}
