--- a/charts/element-web/templates/configmap.yaml
+++ b/charts/element-web/templates/configmap.yaml
@@ -9,11 +9,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.element-web.labels" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-web
   namespace: {{ $.Release.Namespace }}
 data:
   config.json: |-
-    {{- include "element-io.element-web.config" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.element-web.config" (dict "root" $ "context" .) | nindent 4 }}
 {{- end -}}
 {{- end -}}
