--- a/charts/element-web/templates/serviceaccount.yaml
+++ b/charts/element-web/templates/serviceaccount.yaml
@@ -14,8 +14,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.element-web.labels" (dict "context" . "global" $) | nindent 4 }}
-  name: {{ include "element-io.element-web.serviceAccountName" (dict "context" . "global" $) }}
+    {{- include "element-io.element-web.labels" (dict "context" . "root" $) | nindent 4 }}
+  name: {{ include "element-io.element-web.serviceAccountName" (dict "context" . "root" $) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
