--- a/charts/synapse/templates/haproxy_configmap.yaml
+++ b/charts/synapse/templates/haproxy_configmap.yaml
@@ -10,19 +10,19 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse.haproxy.labels" (dict "global" $ "context" .haproxy) | nindent 4 }}
+    {{- include "element-io.synapse.haproxy.labels" (dict "root" $ "context" .haproxy) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-haproxy
   namespace: {{ $.Release.Namespace }}
 data:
   haproxy.cfg: |
-    {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") (dict "global" $ "context" .) | nindent 4 }}
+    {{- tpl ($.Files.Get "configs/haproxy/haproxy.cfg.tpl") (dict "root" $ "context" .) | nindent 4 }}
   path_map_file: |
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
 
-    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson) }}
+    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" (dict "root" $ "context" .)) | fromJson) }}
     {{- range $workerType := $enabledWorkerTypes | sortAlpha }}
-    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "global" $ "context" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes))) | fromJsonArray }}
+    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "root" $ "context" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes))) | fromJsonArray }}
     {{- if len $workersPaths }}
     # {{ $workerType }}
     {{- range $path := $workersPaths }}
