--- a/charts/synapse/templates/synapse_configmap.yaml
+++ b/charts/synapse/templates/synapse_configmap.yaml
@@ -10,21 +10,21 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   labels:
-    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse
   namespace: {{ $.Release.Namespace }}
 data:
   01-homeserver-underrides.yaml: |
-    {{- include "element-io.synapse.config.shared-underrides" (dict "global" $ "context" .) | nindent 4  }}
+    {{- include "element-io.synapse.config.shared-underrides" (dict "root" $ "context" .) | nindent 4  }}
 {{- /*02 files are user provided in Helm values and end up in the Secret*/}}
 {{- /*03 files are user provided as secrets rather than directly in Helm*/}}
   04-homeserver-overrides.yaml: |
-    {{- include "element-io.synapse.config.shared-overrides" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse.config.shared-overrides" (dict "root" $ "context" .) | nindent 4 }}
   05-main.yaml: |
-    {{- include "element-io.synapse.config.processSpecific" (dict "global" $ "context" (dict "processType" "main" "Values" .)) | nindent 4 }}
-{{- range $workerType, $workerDetails := (include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson }}
+    {{- include "element-io.synapse.config.processSpecific" (dict "root" $ "context" (dict "processType" "main" "Values" .)) | nindent 4 }}
+{{- range $workerType, $workerDetails := (include "element-io.synapse.enabledWorkers" (dict "root" $ "context" .)) | fromJson }}
   05-{{ $workerType }}.yaml: |
-    {{- include "element-io.synapse.config.processSpecific" (dict "global" $ "context" (dict "processType" $workerType "Values" $.Values.synapse)) | nindent 4 }}
+    {{- include "element-io.synapse.config.processSpecific" (dict "root" $ "context" (dict "processType" $workerType "Values" $.Values.synapse)) | nindent 4 }}
 {{- end }}
   log_config.yaml: |
     # Copyright 2024 New Vector Ltd
