--- a/charts/synapse/templates/synapse_persistentvolumeclaim.yaml
+++ b/charts/synapse/templates/synapse_persistentvolumeclaim.yaml
@@ -11,7 +11,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   labels:
-    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-media
   namespace: {{ $.Release.Namespace }}
 spec:
