--- a/charts/synapse/templates/synapse_service.yaml
+++ b/charts/synapse/templates/synapse_service.yaml
@@ -6,24 +6,24 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
-{{- range $processType := prepend (keys ((include "element-io.synapse.enabledWorkers" (dict "global" $ "context" .)) | fromJson)) "main" }}
+{{- range $processType := prepend (keys ((include "element-io.synapse.enabledWorkers" (dict "root" $ "context" .)) | fromJson)) "main" }}
 {{- $perProcessRoot := merge (dict "ProcessType" $processType) $.Values.synapse }}
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.synapse.process.labels" (dict "global" $ "context" $perProcessRoot) | nindent 4 }}
+    {{- include "element-io.synapse.process.labels" (dict "root" $ "context" $perProcessRoot) | nindent 4 }}
   name: {{ $.Release.Name }}-synapse-{{ $processType }}
   namespace: {{ $.Release.Namespace }}
 spec:
   clusterIP: None
   ports:
-{{- if (include "element-io.synapse.process.hasHttp" (dict "global" $ "context" .)) }}
+{{- if (include "element-io.synapse.process.hasHttp" (dict "root" $ "context" .)) }}
   - name: synapse-http
     port: 8008
     targetPort: synapse-http
 {{- end }}
-{{- if (include "element-io.synapse.process.hasReplication" (dict "global" $ "context" .)) }}
+{{- if (include "element-io.synapse.process.hasReplication" (dict "root" $ "context" .)) }}
   - name: synapse-repl
     port: 9093
     targetPort: synapse-repl
