--- a/charts/synapse/templates/synapse_serviceaccount.yaml
+++ b/charts/synapse/templates/synapse_serviceaccount.yaml
@@ -15,8 +15,8 @@ metadata:
     {{- toYaml . | nindent 4 }}
   {{- end }}
   labels:
-    {{- include "element-io.synapse.labels" (dict "global" $ "context" .) | nindent 4 }}
-  name: {{ include "element-io.synapse.serviceAccountName" (dict "global" $ "context" .) }}
+    {{- include "element-io.synapse.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ include "element-io.synapse.serviceAccountName" (dict "root" $ "context" .) }}
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
