--- a/charts/element-web/templates/deployment.yaml
+++ b/charts/element-web/templates/deployment.yaml
@@ -13,7 +13,7 @@ metadata:
     {{- toYaml . | nindent 4 }}
 {{- end }}
   labels:
-    {{- include "element-io.element-web.labels" (dict "context" . "root" $) | nindent 4 }}
+    {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-web
   namespace: {{ $.Release.Namespace }}
 spec:
@@ -29,7 +29,7 @@ spec:
   template:
     metadata:
       labels:
-        {{- include "element-io.element-web.labels" (dict "context" . "root" $) | nindent 8 }}
+        {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 8 }}
         k8s.element.io/confighash: "{{ include (print $.Template.BasePath "/configmap.yaml") $ | sha1sum }}"
         k8s.element.io/nginxhash: "{{ include (print $.Template.BasePath "/nginx_configmap.yaml") $ | sha1sum }}"
 {{- with .annotations }}
