--- a/charts/element-web/templates/service.yaml
+++ b/charts/element-web/templates/service.yaml
@@ -9,7 +9,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    {{- include "element-io.element-web.labels" (dict "context" . "root" $) | nindent 4 }}
+    {{- include "element-io.element-web.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-element-web
   namespace: {{ $.Release.Namespace }}
 spec:
