--- a/charts/synapse/templates/haproxy_deployment.yaml
+++ b/charts/synapse/templates/haproxy_deployment.yaml
@@ -56,7 +56,7 @@ spec:
 {{- end }}
       automountServiceAccountToken: false
       serviceAccountName: {{ include "element-io.synapse.haproxy.serviceAccountName" (dict "root" $ "context" .) }}
-{{- include "element-io.ess-library.pods.pullSecrets" (list $ .image) | nindent 6 }}
+{{- include "element-io.ess-library.pods.pullSecrets" (dict "root" $ "context" .image) | nindent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
