--- a/charts/synapse/templates/redis_deployment.yaml
+++ b/charts/synapse/templates/redis_deployment.yaml
@@ -42,7 +42,7 @@ spec:
     spec:
       automountServiceAccountToken: false
       serviceAccountName: {{ include "element-io.synapse.redis.serviceAccountName" (dict "root" $ "context" .) }}
-{{- include "element-io.ess-library.pods.pullSecrets" (list $ .image) | nindent 6 }}
+{{- include "element-io.ess-library.pods.pullSecrets" (dict "root" $ "context" .image) | nindent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
