charts: move element-web to matrix-stack templates

--- a/charts/matrix-stack/Chart.yaml
+++ b/charts/matrix-stack/Chart.yaml
@@ -8,11 +8,10 @@ description: A Helm meta-chart for deploying a Matrix Stack from Element
 type: application
 version: "0.0.0-dev"
 dependencies:
-  - name: "element-web"
-    version: "0.0.0-dev"
-    repository: "file://../element-web"
-    condition: element-web.enabled
   - name: "synapse"
     version: "0.0.0-dev"
     repository: "file://../synapse"
     condition: synapse.enabled
+  - name: ess-library
+    repository: file://../ess-library
+    version: 0.0.0-dev
