--- a/charts/matrix-stack/ci/element-web-checkov-values.yaml
+++ b/charts/matrix-stack/ci/element-web-checkov-values.yaml
@@ -12,3 +12,11 @@ elementWeb:
 
   ingress:
     host: element.ess.localhost
+
+  annotations:
+    checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
+    checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
+
+synapse:
+  enabled: false
