reuse: annotate all json files

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -6,17 +6,7 @@ SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 
 [[annotations]]
-path = "charts/matrix-stack/sub_schemas/*.json"
-SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
-SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
-
-[[annotations]]
-path = "charts/**/sub_schemas/*.json"
-SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
-SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
-
-[[annotations]]
-path = "charts/**/values.schema.json"
+path = "charts/**/*.json"
 SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 
