elementWeb: use Synapse ingress host for matrix server base url

--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -26,6 +26,7 @@ elementWeb:
   additional: {}
 
   ## Defines which Matrix server this Element Web should point at.
+  # If empty, it will try to use Synapse Ingress Host.
   defaultMatrixServer: {}
     ## URL where the Matrix server is hosted
     # baseUrl:
