--- a/charts/matrix-stack/ci/element-web-minimal-values.yaml
+++ b/charts/matrix-stack/ci/element-web-minimal-values.yaml
@@ -7,9 +7,12 @@ ess:
 
 elementWeb:
   enabled: true
-  defaultMatrixServer:
-    baseUrl: https://synapse.ess.localhost
-
+  additional:
+    "default_server_config": {
+      "m.homeserver": {
+        "base_url": "https://synapse.ess.localhost",
+      }
+    }
   ingress:
     host: element.ess.localhost
 
