--- a/charts/matrix-stack/templates/synapse/redis_service.yaml
+++ b/charts/matrix-stack/templates/synapse/redis_service.yaml
@@ -7,6 +7,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 {{- with .Values.synapse -}}
 {{- if .enabled -}}
 {{- if (include "element-io.synapse.enabledWorkers" (dict "root" $ "context" .)) | fromJson }}
+{{- with .redis -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -21,5 +22,6 @@ spec:
   selector:
     app.kubernetes.io/instance: "{{ $.Release.Name }}-synapse-redis"
 {{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
