--- a/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
+++ b/charts/matrix-stack/templates/synapse/haproxy_deployment.yaml
@@ -69,6 +69,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
 {{- end }}
+{{- include "element-io.ess-library.pods.topologySpreadConstraints" (dict "root" $ "context" (dict "instanceSuffix" "synapse-haproxy" "deployment" true "topologySpreadConstraints" .topologySpreadConstraints)) | indent 6 }}
       containers:
       - name: haproxy
 {{- with .image -}}
