--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -66,6 +66,7 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
 {{- end }}
+{{- include "element-io.ess-library.pods.topologySpreadConstraints" (dict "root" $ "context" (dict "instanceSuffix" (printf "synapse-%s" $processType) "deployment" false "topologySpreadConstraints" .topologySpreadConstraints)) | indent 6 }}
 {{- with .hostAliases }}
       hostAliases:
         {{- toYaml . | nindent 8 }}
@@ -265,4 +266,3 @@ We have an init container to render & merge the config for several reasons:
 {{- end }}
 {{- end -}}
 {{- end -}}
-
